<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:isScrollContainer="true"
     >

    <LinearLayout
        android:id="@+id/LinearLayout1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="com.impact.preshopping.ManageDataPanelActivity$PlaceholderFragment" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="10dp"
            android:text="@string/lbl_data_summary"
            android:textAppearance="@android:style/TextAppearance.Holo.Large"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp" >

            <TextView
                android:id="@+id/textViewRowNumber"
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:text="@string/lbl_available_space"
                android:textAppearance="@android:style/TextAppearance.Holo.Medium"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textViewTotalSpace"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_weight="1"
                android:gravity="right"
                android:text="TextView"
                android:textAppearance="@android:style/TextAppearance.Holo.Medium"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp" >

            <TextView
                android:id="@+id/textViewRowNumber"
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:text="@string/lbl_free_space"
                android:textAppearance="@android:style/TextAppearance.Holo.Medium"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textViewFreeSpace"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_weight="1"
                android:gravity="right"
                android:text="TextView"
                android:textAppearance="@android:style/TextAppearance.Holo.Medium"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp" >

            <TextView
                android:id="@+id/textViewRowNumber"
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:text="@string/lbl_total_app_space"
                android:textAppearance="@android:style/TextAppearance.Holo.Medium"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textViewTotalAppSpace"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_weight="1"
                android:gravity="right"
                android:text="TextView"
                android:textAppearance="@android:style/TextAppearance.Holo.Medium"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:gravity="center_vertical" >

            <TextView
                android:id="@+id/textView3"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:text="@string/lbl_mp4"
                android:textAppearance="@android:style/TextAppearance.Holo.Medium"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textViewMp4"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:gravity="right"
                android:text="TextView"
                android:textAppearance="@android:style/TextAppearance.Holo.Medium"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textViewMp4Total"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="right"
                android:text="TextView"
                android:textAppearance="@android:style/TextAppearance.Holo.Medium"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/imageViewMp4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_action_sd_storage" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:visibility="gone" >

            <TextView
                android:id="@+id/textView5"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:text="@string/lbl_mp3"
                android:textAppearance="@android:style/TextAppearance.Holo.Medium"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textViewMp3"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:gravity="right"
                android:text="TextView"
                android:textAppearance="@android:style/TextAppearance.Holo.Medium"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textViewMp3Total"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_weight="1"
                android:gravity="right"
                android:text="TextView"
                android:textAppearance="@android:style/TextAppearance.Holo.Medium"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:gravity="center_vertical" >

            <TextView
                android:id="@+id/textView7"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:text="@string/lbl_image"
                android:textAppearance="@android:style/TextAppearance.Holo.Medium"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textViewImage"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:gravity="right"
                android:text="TextView"
                android:textAppearance="@android:style/TextAppearance.Holo.Medium"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textViewImageTotal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_weight="1"
                android:gravity="right"
                android:text="TextView"
                android:textAppearance="@android:style/TextAppearance.Holo.Medium"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/imageViewImage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_action_sd_storage" />
        </LinearLayout>

        <Button
            android:id="@+id/btnMangeData"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:drawableLeft="@drawable/filetype_sdcard"
            android:text="@string/lbl_manage_data" />

    </LinearLayout>

</ScrollView>